--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -75,7 +74,7 @@ dependencies:
   dartz: ^0.10.1
   # Google Auth
   google_sign_in: ^6.1.4
-#  device_preview: ^0.1.4-beta
+  #  device_preview: ^0.1.4-beta
   responsive_builder: ^0.7.0
   lottie: ^2.3.2
   pin_code_fields: ^8.0.1
@@ -97,19 +96,16 @@ dependencies:
   carousel_slider: ^4.2.1
 
 
-
-
-
+flutter_lints: ^2.0.0
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+
+  image_path: "assets/images/onBoarding/sneakerOnBoarding3.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -124,9 +120,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/
-   - assets/images/onBoarding/
-   - assets/lottie/
+    - assets/images/
+    - assets/images/onBoarding/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -140,27 +136,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: Raleway
-       fonts:
-         - asset: assets/fonts/Raleway/Raleway-Black.ttf
-           weight: 900
-         - asset: assets/fonts/Raleway/Raleway-Bold.ttf
-           weight: 700
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/Raleway/Raleway-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Raleway/Raleway-Bold.ttf
+          weight: 700
 
-     - family: Poppins
-       fonts:
-         - asset: assets/fonts/Poppins/Poppins-Regular.ttf
-
-#         - asset: assets/fonts/Raleway/Raleway-Bold.ttf
-#           weight: 300
-
-
-
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
